Fixed the whitespace issue with redactor. And added a comment into EntityAttributeExtension about using propertypath

--- a/Resources/public/redactor/redactor-inline.css
+++ b/Resources/public/redactor/redactor-inline.css
@@ -47,7 +47,6 @@ body .redactor_box_fullscreen {
 	outline: none;
 	border: none;
 	width: 100%;
-	white-space: normal;
 }
 
 /*
